cmake_minimum_required(VERSION 3.17)
project(FCAK)
LIST(APPEND SRC_DIR algo_kit test_cases)
foreach(cur_dir ${SRC_DIR})
	file(GLOB_RECURSE SRCS ${cur_dir}/*.cpp)
	file(GLOB_RECURSE HDRS ${cur_dir}/*.h)
	file(GLOB_RECURSE HPPS ${cur_dir}/*.hpp)
	LIST(APPEND SRC_LIST ${SRCS})
	LIST(APPEND HDR_LIST ${HDRS} ${HPPS})
endforeach()
add_executable(fcak_test main.cpp ${SRC_LIST} ${HDR_LIST})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/algo_kit/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/test_cases)